Refactor CORS configuration to use List.of()