@@ -1,33 +1,33 @@
 package TaskManager.TaskManager.Security;
+package TaskManager.TaskManager.Security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.List; // Only need this import
+import java.util.List; // Only need List import
 
 @Configuration
 public class CorsConfig {
 
-   @Bean
-public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration config = new CorsConfiguration();
-    
-    // ⚠️ MUST include localhost:5173
-    config.setAllowedOrigins(Arrays.asList(
-        "http://localhost:5173",                    // React dev server
-        "https://task-manager-frontend.onrender.com" // Your deployed frontend
-    ));
-    
-    config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    config.setAllowedHeaders(Arrays.asList("*"));
-    config.setAllowCredentials(false); // Set to false for now
-    config.setMaxAge(3600L);
-    
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", config);
-    
-    return source;
-}
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration config = new CorsConfiguration();
+     
+        config.setAllowedOrigins(List.of(
+            "http://localhost:5173",                    // React dev server
+            "https://task-manager-frontend.onrender.com" // Your deployed frontend
+        ));
+        
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(false);
+        config.setMaxAge(3600L);
+        
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        
+        return source;
+    }
 }
